--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-fastfetch (2.15.0+dfsg-1) UNRELEASED; urgency=medium
+fastfetch (2.15.0+dfsg-1) unstable; urgency=medium
 
   * Initial release. (Closes: #1053995)
 
- -- Hiago De Franco <hiagofranco@gmail.com>  Thu, 09 May 2024 19:36:22 -0300
+ -- Hiago De Franco <hiagofranco@gmail.com>  Mon, 10 Jun 2024 14:00:50 +0800
