--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-fastfetch (2.15.0+dfsg-2) UNRELEASED; urgency=medium
+fastfetch (2.15.0+dfsg-2) unstable; urgency=medium
 
   * Source only upload.
 
